@@ -1,4 +1,4 @@
-// $Id: ConfigurationData.cpp,v 1.8 2004/11/06 11:25:05 manuelbi Exp $
+// $Id: ConfigurationData.cpp,v 1.9 2004/11/06 13:51:33 manuelbi Exp $
 // onfigurationData.cpp: implementation of the ConfigurationData class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -27,6 +27,8 @@ ConfigurationData::ConfigurationData()
 	ConfigData->Read(wxT("/history/CartA"),&m_cartaHistory);
 	ConfigData->Read(wxT("/history/CartB"),&m_cartbHistory);
 	ConfigData->Read(wxT("/history/Cassette"),&m_cassetteHistory);
+	ConfigData->Read(wxT("/history/TypeCartA"),&m_typeHistCartA);
+	ConfigData->Read(wxT("/history/TypeCartB"),&m_typeHistCartB);
 	ConfigData->Read(wxT("/history/MediaInserted"),&m_mediaInserted);
 	ConfigData->Read(wxT("/history/UsedMachine"),&m_usedMachine);
 	ConfigData->Read(wxT("/history/UsedExtensions"), &m_usedExtensions);
@@ -79,6 +81,12 @@ bool ConfigurationData::SetParameter(int p_iId, wxVariant p_data)
 			break;
 		case CD_HISTCASSETTE:
 			m_cassetteHistory = p_data.GetString();
+			break;
+		case CD_TYPEHISTCARTA:
+			m_typeHistCartA = p_data.GetString();
+			break;
+		case CD_TYPEHISTCARTB:
+			m_typeHistCartB = p_data.GetString();
 			break;
 		case CD_USEDMACHINE:
 			m_usedMachine = p_data.GetString();
@@ -139,6 +147,12 @@ bool ConfigurationData::GetParameter(int p_iId, wxString &p_data)
 			break;
 		case CD_HISTCASSETTE:
 			p_data = m_cassetteHistory;
+			break;
+		case CD_TYPEHISTCARTA:
+			p_data = m_typeHistCartA;
+			break;
+		case CD_TYPEHISTCARTB:
+			p_data = m_typeHistCartB;
 			break;
 		case CD_USEDMACHINE:
 			p_data = m_usedMachine;
@@ -205,6 +219,8 @@ bool ConfigurationData::SaveData()
 	retVal &= ConfigData->Write(wxT("/history/CartA"),m_cartaHistory);
 	retVal &= ConfigData->Write(wxT("/history/CartB"),m_cartbHistory);
 	retVal &= ConfigData->Write(wxT("/history/Cassette"),m_cassetteHistory);
+	retVal &= ConfigData->Write(wxT("/history/TypeCartA"),m_typeHistCartA);
+	retVal &= ConfigData->Write(wxT("/history/TypeCartB"),m_typeHistCartB);
 	retVal &= ConfigData->Write(wxT("/history/MediaInserted"),m_mediaInserted);
 	retVal &= ConfigData->Write(wxT("/history/UsedMachine"),m_usedMachine);
 	retVal &= ConfigData->Write(wxT("/history/UsedExtensions"),m_usedExtensions);
