@@ -1,4 +1,4 @@
-// $Id: ConfigurationData.h,v 1.7 2004/11/06 11:25:05 manuelbi Exp $
+// $Id: ConfigurationData.h,v 1.8 2004/11/06 13:51:33 manuelbi Exp $
 // onfigurationData.h: interface for the ConfigurationData class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -26,8 +26,9 @@ class ConfigurationData
 		bool GetParameter (int p_iId, wxString & p_data);
 		bool GetParameter (int p_iId, int * p_data);
 		enum ID {CD_EXECPATH, CD_SHAREPATH,CD_HISTDISKA, CD_HISTDISKB, CD_HISTCARTA, CD_HISTCARTB,
-			CD_HISTCASSETTE, CD_MEDIAINSERTED, CD_USEDMACHINE,CD_USEDEXTENSIONS,
-			CD_FULLSCREENWARN,CD_SCREENSHOTINFO,CD_JOYPORT1,CD_JOYPORT2,CD_PRINTERPORT,CD_PRINTERFILE,
+			CD_HISTCASSETTE, CD_TYPEHISTCARTA, CD_TYPEHISTCARTB, CD_MEDIAINSERTED, CD_USEDMACHINE,
+			CD_USEDEXTENSIONS, CD_FULLSCREENWARN,CD_SCREENSHOTINFO,CD_JOYPORT1,CD_JOYPORT2,
+			CD_PRINTERPORT,CD_PRINTERFILE,
 			};
 			enum MediaBits {MB_DISKA=1, MB_DISKB=2, MB_CARTA=4, MB_CARTB=8, MB_CASSETTE=16};
 			bool SetParameter (int p_iId, wxVariant p_data);
@@ -47,6 +48,8 @@ class ConfigurationData
 			wxString m_cartaHistory;
 			wxString m_cartbHistory;
 			wxString m_cassetteHistory;
+			wxString m_typeHistCartA;
+			wxString m_typeHistCartB;
 			wxString m_usedMachine;
 			wxString m_usedExtensions;
 			wxString m_usedJoyport1;
